--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 body {
   margin: 0;
   font-family: "Gill Sans", sans-serif;
+  background-color: rgb(254, 221, 145);
 }
+
 .centered {
   width: 100vw;
   height: 100vh;
@@ -20,7 +22,7 @@ body {
 
 .back_btn {
   font-weight: bold;
-  padding: 5px 20px;
+  padding: 10px 30px;
   color: springgreen;
   border: 2px double greenyellow;
   border-radius: 10px;
