--- a/src/components/blogs/Blogs.css
+++ b/src/components/blogs/Blogs.css
@@ -1,3 +1,46 @@
+.search__bar {
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.search__bar__holder {
+  position: relative;
+  display: flex;
+  overflow: hidden;
+}
+
+.search__bar input[type="search"] {
+  background: transparent;
+  width: 250px;
+  height: 40px;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  transition: all 0.5s ease;
+  border-bottom: 3px solid rgb(255, 255, 255);
+}
+
+.search__bar input[type="search"]::placeholder {
+  color: rgba(0, 0, 0, 0.499);
+}
+
+.line {
+  position: absolute;
+  bottom: 0;
+  transform: translateX(-250px);
+  height: 3px;
+  background-color: rgb(93, 0, 116);
+  width: 100%;
+  transition: all 0.5s ease-in-out;
+}
+
+.search__bar input[type="search"]:focus ~ .line {
+  transform: translateX(0px);
+}
+
 .blogs__page {
   padding: 20px;
 }
