--- a/src/components/sideDrawer/SideDrawer.css
+++ b/src/components/sideDrawer/SideDrawer.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-
+  padding: 30px 0;
   top: 0;
   background-color: #ffffff;
   width: 60%;
