--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: "Gill Sans", sans-serif;
-  background-color: rgb(254, 221, 145);
+  background-color: rgba(145, 254, 149, 0.66);
 }
 
 .centered {
@@ -23,8 +23,8 @@ body {
 .back_btn {
   font-weight: bold;
   padding: 10px 30px;
-  color: springgreen;
-  border: 2px double greenyellow;
+  color: rgb(255, 217, 0);
+  border: 2px double rgb(255, 47, 120);
   border-radius: 10px;
   background-color: rgb(15, 38, 80);
   margin: 10px 0 20px 0;
